0.2.20 2016-12-19

* Requires the latest version of Outthentic::DSL
* Examples tweaked so that tests passed for the latest version of Outthentic::DSL

0.2.19 2016-12-19

* restore lost META.yml 

0.2.18 2016-12-19

* print story variables in strun's report 
* story statistics and custom reports feature (not documented yet)

0.2.17 2016-12-16

* make output more concise

0.2.16 2016-12-15

* `--purge-cache` parameter

0.2.15 2016-11-19

* `strun` --dump-config option to dump suite configuration
* suite.ini files - use Config::General with InterPolateEnv enabled


0.2.14 2016-11-18

* suite.ini files - use Config::General with InterPolateVars enabled
* `strun` - --nocolor option to run colorless mode.
* `SPARROW_NO_COLOR` environment variable

0.2.13 2016-11-14

* dump_os() - support for Minoca OS

0.2.12 2016-10-20

* choose cache dir location more safely to avoid multi users conflicts

0.2.11 2016-10-20

* don't run checks for failed scenarios
* empty check files are valid

0.2.10 2016-08-25

* sub _resolve_os - recognize a Red Hat OS
* sub dump_os - dump OS strings as is ( helpful when troubleshooting OS recognition issues )

0.2.9 2016-08-21

* meta stories - POD updated

0.2.8 2016-08-21

* meta stories

0.2.7 2016-08-19

* fixing errors in sub _resolve_os function

0.2.6 2016-08-18

* fix package main bug

0.2.5 2016-08-18

* `os` helper to get know a OS name of target host

0.2.4 2016-08-18

* fix for bad exit code generated by strun 

0.2.3 2016-08-18

* better errors handling

0.2.2 2016-08-15

* a minor typo fixes ( both documentation and strun output )

0.2.1 2016-08-15

* fixed minor issues related to outthentic exit code and make it possible run a Test-Harness tests

0.2.0 2016-08-15

* don't use Test::More, Test-Harness anymore.

0.1.9 2016-07-11

* fix broken pod

0.1.8 2016-07-11

* bin/strun: now accepts $SPARROW_ROOT directory as test root directory prefix

0.1.7 2016-06-27

* now outtnentic respect silent mode

0.1.6 2016-06-16
