@@ -27,7 +27,7 @@ requires:
   File::Temp: 0
   Hash::Merge: 0
   JSON: 0
-  Outthentic::DSL: 0.1.6
+  Outthentic::DSL: 0.2.0
   Term::ANSIColor: '4.02'
   YAML: 0
 resources:
